# inventory_app

./: .coverage  .gitignore  LICENSE  README.md  app.py  assign_admin.py  codecov.yml  conftest.py  get-pip.py  migrate_data.py  migrations.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  run.py  seed_permissions.py  seed_roles.py  test_config.py  test_models.py  test_routes.py
.github/workflows/: cycle_dev_branch.yml  test.yml
app/: __init__.py  init.py
app/forms/: __init__.py  auth.py  product.py  role.py  user.py
app/models/: __init__.py  db.py  oauth.py  permission.py  product.py  role.py  user.py
app/routes/: __init__.py  admin.py  auth.py  main.py  products.py  reports.py
app/services/: __init__.py  inventory_service.py  product_service.py  role_service.py  user_service.py
app/templates/: _form_helpers.html  base.html  inventory_status.html
app/utils/: __init__.py  formatter.py  helpers.py  validators.py
config/: __init__.py  default.py  development.py  production.py  testing.py
inventory_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/versions/: 0e960265f1cb_initial_schema.py  2d4ee14144a5_add_permission_model_and_role_.py  42efaaf36a87_change_product_price_to_numeric_type.py  6f1b021c7328_add_role_model_and_user_roles_.py  892425462a24_add_index_to_product_name_and_sku.py  8ab0cbb4f965_complete_reset_migration_post_cache_.py  bedb2d6378ed_initial_migration.py
scripts/: migrate_data.py  sync_local_dev.sh  test_db.py  update_db.py
static/css/: output.css
templates/: base.html  stock_levels.html
templates/products/: add.html  edit.html  (+3 more)
tests/: .coverage  conftest.py  test_app_factory.py  test_config.py
(+39 files in other folders)
