[project]
name = "inventory-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Application Dependencies
    "alembic==1.15.2",
    "blinker==1.9.0",
    "certifi==2024.1.31", 
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.1.0",
    "flask==2.3.3",
    "flask-dance==7.1.0",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "greenlet==3.2.0", # Dependency of SQLAlchemy/Alembic
    "idna==3.10",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "mako==1.3.10", # Dependency of Alembic
    "markupsafe==2.1.3",
    "oauthlib==3.2.2",
    "packaging==25.0", # Often a transitive dependency, safe to list
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "sqlalchemy==2.0.23",
    "typing-extensions==4.13.2", # Often needed by modern libraries
    "urllib3==2.4.0",
    "urlobject==2.4.3",
    "werkzeug==2.3.7",
    "wtforms==3.1.1",
    "wtforms-sqlalchemy==0.4.2",
]

[project.optional-dependencies]
dev = [
    # Development and Testing Dependencies
    "coverage==7.3.2",
    "iniconfig==2.1.0", # Pytest dependency
    "pluggy==1.5.0", # Pytest dependency
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-flask==1.3.0",
]

# Add other sections like [build-system] if you have them or need them
# e.g., for build backends like setuptools, hatchling, etc.
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"
